[package]
name = "actix-web"
version = "0.1.0"
authors = ["Stefan Dörig <sdoerig@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
serde = "1.0.99"
serde_json = "1.0.40"
futures = "0.1.29"
bytes = "0.4.12"
chrono = "0.4"